[자동차 경주 구현 step2] 명오(김형호) 미션 제출합니다 (#759)
* refactor(domain): 패키지 이름 변경

model 패키지 이름 domain으로 변경

* refactor(main): findWinners 메서드 변경

findWinners가 List<Car>를 반환하는 것이 아닌 List<String>으로 바로 이름들을 반환하도록 변경 및 그에 따른 이름과 로직 수정

* refactor(test): 테스트 이름 변경

findWinners가 로직 변경에 따른 테스트코드 변경 및 테스트코드의 이름을 더 이해하기 쉽게 변경

* refactor(Cars): getPresentCarsStatus 변경

getPresentCarsStatus가 반환된 값이 원본 리스트가 변경되어도 변하지 않도록(immutable 하도록) 수정

* refactor(CarsTest): 메서드명 변경

cars()가 어떤 값을 담고 있는지 더 자세히 설명하기 위해 메서드명을 movementsAndWinnerNames()로 변경

* feat(test): 테스트 케이스 추가

올바른 입력이 오류를 던지지 않는 지 테스트하는 코드 추가